--- a/anhf-portal/src/app/wrapper/wrapper.component.css
+++ b/anhf-portal/src/app/wrapper/wrapper.component.css
@@ -1,18 +1,20 @@
-/* wrapper.component.css */
 .nav-bar {
+  height: 80px;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  background-color: #00afef;
 }
 
 .logo {
   height: 100px;
   margin-top: 20px;
 }
-
+.text
 .menu-item {
   margin: 0 10px;
   font-size: large;
+  color: azure;
 }
 
 .admin-icon-container {
@@ -22,8 +24,9 @@
 }
 
 .example-icon {
-    margin-right: 8px;
-  }
+  margin-right: 8px;
+  color: azure;
+}
 
 @media (max-width: 600px) {
   .menu-item {
