--- a/anhf-portal/src/app/home/home.component.css
+++ b/anhf-portal/src/app/home/home.component.css
@@ -60,3 +60,51 @@
 .stat p {
   font-size: 1em;
 }
+
+.about {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.about-background {
+  position: relative;
+}
+
+.about-background::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.9
+  ); /* White background with high opacity */
+  z-index: 1;
+}
+
+.about-background img {
+  width: 100%;
+  height: 500px;
+  object-fit: contain;
+  position: relative;
+  z-index: 0;
+}
+.about-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 1800px;
+  padding: 20px;
+  z-index: 2; /* Ensure the content is above the overlay */
+}
+
+.about-content h1 {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+}
