--- a/anhf-portal/src/app/the-foundation/the-foundation.component.html
+++ b/anhf-portal/src/app/the-foundation/the-foundation.component.html
@@ -18,3 +18,12 @@
     </div>
   </div>
 </div>
+<div class="max-w-7xl mx-auto grid grid-cols-2 py-20">
+  <p class="col-span-1 text-xl">
+    <span class="text-2xl">Our vision</span>
+    To create a self-sustaining community in Nyali Constituency, where every
+    family and individual enjoys a brighter future, enriched by improved quality
+    of life, economic stability, and social wellbeing.
+  </p>
+  <p class="col-span-1"></p>
+</div>
