--- a/anhf-portal/src/app/the-foundation/the-foundation.component.html
+++ b/anhf-portal/src/app/the-foundation/the-foundation.component.html
@@ -18,12 +18,52 @@
     </div>
   </div>
 </div>
-<div class="max-w-7xl mx-auto grid grid-cols-2 py-20">
-  <p class="col-span-1 text-xl">
-    <span class="text-2xl">Our vision</span>
-    To create a self-sustaining community in Nyali Constituency, where every
-    family and individual enjoys a brighter future, enriched by improved quality
-    of life, economic stability, and social wellbeing.
-  </p>
-  <p class="col-span-1"></p>
+<div class="bg-blue-100">
+  <div
+    class="max-w-7xl mx-auto md:grid grid-cols-2 flex flex-col py-5 lg:py-20 gap-5 lg:gap-10"
+  >
+    <p class="col-span-1 lg:text-xl text-lg text-center px-5">
+      <span class="text-2xl text-orange-500">Mission Statement:</span><br />
+      To lead and implement sustainable, high-impact community development
+      initiatives in Nyali Constituency that empower individuals and families,
+      fostering economic growth, social inclusion, and a united community with
+      the capacity to thrive independently.
+    </p>
+    <p class="col-span-1 lg:text-xl text-lg text-center px-5">
+      <span class="text-2xl font-normal text-blue-500">Our vision:</span><br />
+      To create a self-sustaining community in Nyali Constituency, where every
+      family and individual enjoys a brighter future, enriched by improved
+      quality of life, economic stability, and social wellbeing.
+    </p>
+  </div>
+</div>
+<div class="py-5 lg:py-20 bg-[#00afef] text-white">
+  <div class="max-w-5xl mx-auto flex flex-col gap-5">
+    <p class="text-center text-3xl ">History of our Foundation</p>
+    <li class="col-span-1 lg:text-xl text-lg px-5">
+      The inception of ANHF was also inspired by the growing interest and
+      encouragement from both local and international humanitarian organizations
+      operating in Nyali Constituency. These institutions had long advocated for
+      the emergence of youth-led organizations focused on development,
+      education, policy advocacy, and leadership. ANHF was founded to fill this
+      void and to channel the energy, creativity, and passion of young people
+      towards meaningful community-driven initiatives
+    </li>
+    <li class="col-span-1 lg:text-xl text-lg px-5">
+      From the outset, ANHF has been committed to addressing the critical needs
+      of the community, with a particular focus on youth, children, women,
+      widows, and people with disabilities. The foundation was established in
+      response to the persistent challenges faced by these groups, including
+      inadequate access to resources, lack of opportunities, and the absence of
+      effective interventions from both government and non-governmental entitie
+    </li>
+    <li class="col-span-1 lg:text-xl text-lg px-5">
+      Unlike many organizations that have struggled with limited resources and
+      ineffective policies, ANHF is determined to make a real difference. We are
+      dedicated to fostering sustainable development through the power of
+      volunteerism, intercultural exchange, and community engagement. Our
+      programs are designed to promote youth employment, social inclusion, and
+      the unity of purpose among diverse communities
+    </li>
+  </div>
 </div>
