--- a/anhf-portal/src/app/home/home.component.css
+++ b/anhf-portal/src/app/home/home.component.css
@@ -1,3 +1,4 @@
+/* Hero Section */
 .hero {
   position: relative;
   text-align: center;
@@ -21,7 +22,7 @@
 
 .hero-background img {
   width: 100%;
-  height: 700px;
+  height: 50vh; /* Adjusted for responsiveness */
   object-fit: cover;
   position: relative;
   z-index: 0;
@@ -29,31 +30,63 @@
 
 .hero-content {
   position: absolute;
-  top: 80%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  max-width: 1800px;
+  max-width: 90%; /* Adjusted for responsiveness */
   padding: 20px;
   z-index: 2; /* Ensure the content is above the overlay */
+  text-align: center;
 }
 
 .hero-content h1 {
-  font-size: 2em;
+  font-size: 1.5em; /* Adjusted for smaller screens */
   margin-bottom: 20px;
 }
 
+@media (min-width: 768px) {
+  .hero-content h1 {
+    font-size: 2em; /* Larger font for bigger screens */
+  }
+
+  .hero-background img {
+    height: 70vh; /* Increase image height for larger screens */
+  }
+}
+
+@media (min-width: 1024px) {
+  .hero-content h1 {
+    font-size: 3em; /* Even larger font for desktop */
+  }
+
+  .hero-background img {
+    height: 80vh; /* Further increase image height */
+  }
+}
+
+/* Hero Stats Section */
 .hero-stats {
   background-color: #ec672c;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: 1fr; /* Default single column */
+  gap: 10px;
+  padding: 20px;
 }
 
-.stat {
-  margin: 10px;
+@media (min-width: 768px) {
+  .hero-stats {
+    grid-template-columns: repeat(2, 1fr); /* Two columns for medium screens */
+  }
+}
+
+@media (min-width: 1024px) {
+  .hero-stats {
+    grid-template-columns: repeat(3, 1fr); /* Three columns for large screens */
+  }
 }
 
 .stat h1 {
-  font-size: 2em;
+  font-size: 1.5em;
   margin-bottom: 10px;
 }
 
@@ -61,6 +94,7 @@
   font-size: 1em;
 }
 
+/* About Section */
 .about {
   position: relative;
   text-align: center;
@@ -89,22 +123,37 @@
 
 .about-background img {
   width: 100%;
-  height: 500px;
+  height: auto;
+  max-height: 500px;
   object-fit: contain;
   position: relative;
   z-index: 0;
 }
+
 .about-content {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  max-width: 1800px;
+  max-width: 90%; /* Adjusted for responsiveness */
   padding: 20px;
   z-index: 2; /* Ensure the content is above the overlay */
+  text-align: center;
 }
 
 .about-content h1 {
-  font-size: 1.5em;
+  font-size: 1.2em; /* Adjusted for smaller screens */
   margin-bottom: 20px;
+}
+
+@media (min-width: 768px) {
+  .about-content h1 {
+    font-size: 1.5em; /* Larger font for medium screens */
+  }
+}
+
+@media (min-width: 1024px) {
+  .about-content h1 {
+    font-size: 2em; /* Even larger font for large screens */
+  }
 }
