--- a/anhf-portal/src/app/contact/contact.component.html
+++ b/anhf-portal/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section id="contact" class="section-bg-light-blue">
+<section class="mt-20">
   <img src="../../assets/logo.png" alt="Watermark Logo" class="watermark" />
   <div class="contact-info">
     <h1>Contact Us</h1>
